# qwen3-lora-continued-pretraining

slm-research/: .gitignore  README.md  documentation.md  pyproject.toml  requirements.txt
slm-research/.claude/skills/: documentation.md  engineering-review.md  git-workflow.md  huggingface-training.md  hydra-config.md  ml-engineering.md  performance.md  project-architecture.md  python-style.md  testing.md
slm-research/configs/: config.yaml
slm-research/configs/benchmarking/: default.yaml
slm-research/configs/data/: ag_news.yaml  bookcorpusopen.yaml  cnn_dailymail.yaml  daily_dialog.yaml  eli5.yaml  fineweb_edu.yaml  mixture.yaml  openwebtext.yaml  tinystories.yaml  wikitext.yaml  xsum.yaml  yelp_review_full.yaml
slm-research/configs/evaluation/: default.yaml
slm-research/configs/inference/: default.yaml
slm-research/configs/logging/: wandb.yaml
slm-research/configs/lora/: rank16.yaml  rank32.yaml  rank64.yaml  rank8.yaml
slm-research/configs/model/: qwen3_0.6b_base.yaml
slm-research/configs/optimizer/: adamw.yaml  paged_adamw_8bit.yaml
slm-research/configs/scheduler/: constant.yaml  cosine.yaml  linear.yaml
slm-research/configs/training/: default.yaml  runpod_4090.yaml
slm-research/docs/: architecture.md  benchmark_guide.md  configuration_guide.md  dataset_guide.md  developer_guide.md  training_guide.md
slm-research/reports/latex/: main.tex
slm-research/scripts/: benchmark.py  cli.py  download_data.py  evaluate.py  infer.py  preprocess.py  train.py
slm-research/src/slm_research/: __init__.py
slm-research/tests/test_data/: test_data_stub.py  (+2 more)
(+61 files in other folders)
